2015-05-02  Trevor Saunders  <tbsaunde+gcc@tbsaunde.org>

	* haifa-sched.c: Change the type of some variables to rtx_insn *.
	* sched-deps.c: Likewise.
	* sched-int.h: Likewise.
	* sched-rgn.c: Likewise.
	* sel-sched.c: Likewise.

2015-05-02  Trevor Saunders  <tbsaunde+gcc@tbsaunde.org>

	to rtx_insn *.
	* config/i386/i386.c: Change the type of some arguments to
	rtx_insn *.
	* config/arm/arm.c: Likewise.

2015-05-02  Trevor Saunders  <tbsaunde+gcc@tbsaunde.org>

	* lra-constraints.c: Change type of some arguments to rtx_insn *.

2015-05-02  Trevor Saunders  <tbsaunde+gcc@tbsaunde.org>

	* regcprop.c (kill_autoinc_value): Change type of argument to
	rtx_insn *.

2015-05-02  Trevor Saunders  <tbsaunde+gcc@tbsaunde.org>

	* genrecog.c (print_subroutine): Adjust.
	* recog.c (get_bool_attr_mask_uncached): Likewise.
	* recog.h (struct recog_data_d): Change the type of insn to
	rtx_insn *.

2015-05-02  Trevor Saunders  <tbsaunde+gcc@tbsaunde.org>

	* dwarf2cfi.c (add_cfi_insn): Change type to rtx_insn *.

2015-05-02  Trevor Saunders  <tbsaunde+gcc@tbsaunde.org>

	* df-problems.c (df_set_note): Change type of argument to
	rtx_insn *.

2015-05-02  Trevor Saunders  <tbsaunde+gcc@tbsaunde.org>

	* builtins.c (expand_builtin_trap): Change type of local
	variable to rtx_insn *.
	(add_sched_insns_for_speculation): Likewise.
	(ix86_emit_save_regs): Likewise.
	(get_scratch_register_on_entry): Likewise.
	(ix86_emit_restore_reg_using_pop): Likewise.
	(ix86_emit_leave): Likewise.
	(ix86_emit_restore_regs_using_mov): Likewise.
	(ix86_expand_epilogue): Likewise.
	Likewise.
	(rl78_alloc_physical_registers_umul): Likewise.
	* cselib.c (discard_useless_locs): Likewise.
	(cselib_invalidate_regno): Likewise.
	(cselib_invalidate_mem): Likewise.
	* function.c (expand_function_start): Likewise.
	(emit_use_return_register_into_block): Likewise.
	* gcse.c: Likewise.
	* haifa-sched.c (ok_for_early_queue_removal): Likewise.
	* ifcvt.c (noce_get_alt_condition): Likewise.